# Leonardo_Palazzo_progetto_lab_programmazione

./: CMakeLists.txt  Collezione.cpp  Collezione.h  Nota.cpp  Nota.h  Observer.h  ObserverCounter.cpp  ObserverCounter.h  Subject.h  main.cpp
tests/: Test_classe_Collezione.cpp  Test_classe_Nota.cpp  Test_classe_ObserverCounter.cpp
